// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common/ShellBox Default smoke-test 1`] = `
<pre class="ShellBox_shellBox__n5v7E">
  <div class="ShellBox_top__SxRc6">
    <span>
      SHELL
    </span>
    <button type="button">
      copy
    </button>
  </div>
  <code>
    echo hello world
  </code>
</pre>
`;

exports[`Common/ShellBox WithTextToCopyJSX smoke-test 1`] = `
<pre class="ShellBox_shellBox__n5v7E">
  <div class="ShellBox_top__SxRc6">
    <span>
      SHELL
    </span>
    <button type="button">
      copy
    </button>
  </div>
  <code>
    <span>
      <strong>
        $
      </strong>
      echo hello world
    </span>
  </code>
</pre>
`;

exports[`Common/ShellBox WithoutTextToCopy smoke-test 1`] = `
<pre class="ShellBox_shellBox__n5v7E">
  <div class="ShellBox_top__SxRc6">
    <span>
      SHELL
    </span>
    <button type="button">
      copy
    </button>
  </div>
  <code>
    echo hello world
  </code>
</pre>
`;
